# auto-commit

./: .gitignore  AGENTS.md  LICENSE  README.md  auto-commit.py  auto_commit.py  env.example  pyproject.toml  requirements.txt
scripts/: install.sh  refresh-venv.sh
tests/: test_dependency_stack.py
