[project]
name = "auto-commit"
version = "0.1.0"
description = "Generate Git commit messages from staged changes using AI providers or macOS Shortcuts."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "GitPython>=3.1.46",
    "google-genai>=1.73.0",
    "openai>=2.31.0",
    "pydantic>=2.13.0",
    "python-dotenv>=1.2.2",
]

[project.scripts]
autocommit = "auto_commit:main"

[dependency-groups]
dev = []

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["auto_commit"]
